Overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -23,8 +23,8 @@ body {
     padding: 0;
     margin: 0;
     text-decoration: none;
-    overflow: hidden;
-    max-width: 100%
+    overflow-x: hidden;
+    max-width: 100%;
 }
 
 .container {
